overflow fix

--- a/.anon.dir/Data/dcor/aard.css
+++ b/.anon.dir/Data/dcor/aard.css
@@ -23,7 +23,8 @@
 
 .DataViewPanl
 {
-    overflow:auto;
+    position:absolute !important;
+    overflow:auto !important;
 }
 
 datagrid.darkSide
